[project]
name = "pytorch_random_opt"
version = "0.0.1"
description = "random optimizers for torch"
authors = [
    {name = "Michael Gooch", email = "goochmi@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "torch>=2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "UNLICENSE"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
